Fixed REI rendering fluid very dark